--- a/computerizedaccounting/styles/globals.css
+++ b/computerizedaccounting/styles/globals.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 .transition-halfs{
     transition: 0.5s;
 }
@@ -10,7 +10,7 @@
     outline: 2px solid transparent;
     box-shadow: none;
     border-color: none;
-    font-family: 'Montserrat', sans-serif !important;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .myListItemText {
